updates: removes included inbox.h

--- a/taste/Makefile
+++ b/taste/Makefile
@@ -1,6 +1,6 @@
 CC=g++
 CFLAGS=-std=c++11
-SRC=client.cpp inbox.h message.cpp main.cpp
+SRC=client.cpp message.cpp main.cpp
 NAME=taste.out
 
 taste:
